Add Team breakdowns

--- a/src/webapp/src/assets/main.css
+++ b/src/webapp/src/assets/main.css
@@ -1,4 +1,4 @@
 @import 'tailwindcss';
-@source inline("h-[800px]");
+@source inline("h-[{800,400}px]");
 
 @custom-variant dark (&:where(.dark, .dark *));
